# ajime-agent

./: .gitignore  CLAUDE.md  Cargo.toml  E2E_TESTING.md  LICENSE  README.md
.github/: ci-config.yaml
.github/workflows/: release.yml
agent/: Cargo.toml  build.rs
agent/src/: errors.rs  lib.rs  logs.rs  main.rs  telemetry.rs  utils.rs
agent/src/app/: mod.rs  options.rs  run.rs  state.rs
agent/src/authn/: device_token.rs  mod.rs  token_mngr.rs
agent/src/cache/: mod.rs  workflow.rs
agent/src/deploy/: compose.rs  docker.rs  executor.rs  fsm.rs  git.rs  mod.rs  node_runner.rs
agent/src/filesys/: dir.rs  file.rs  mod.rs  relay.rs
agent/src/hardware/: camera.rs  gpio.rs  i2c.rs  mod.rs
agent/src/http/: client.rs  deployments.rs  devices.rs  mod.rs  workflows.rs
agent/src/installer/: install.rs  mod.rs
agent/src/models/: deployment.rs  mod.rs  workflow.rs
agent/src/mqtt/: client.rs  mod.rs  topics.rs
agent/src/scanner/: mod.rs
agent/src/server/: handlers.rs  mod.rs  serve.rs  state.rs
agent/src/services/: mod.rs
agent/src/storage/: device.rs  layout.rs  mod.rs  settings.rs
agent/src/sync/: mod.rs  syncer.rs
agent/src/terminal/: mod.rs
agent/src/workers/: deployer.rs  mod.rs  mqtt.rs  poller.rs  relay.rs  token_refresh.rs
agent/tests/integration/: mod.rs  test_activation.rs  test_sync.rs
agent/tests/unit/: mod.rs  test_cache.rs  test_fsm.rs  test_token_manager.rs
api/: regen.sh
api/specs/agent-server/: v01.yaml
api/specs/backend-client/: v01.yaml
config/: settings.yaml
docs/: api.md  install.md
libs/openapi-client/: Cargo.toml
libs/openapi-client/src/: lib.rs
libs/openapi-client/src/models/: mod.rs
libs/openapi-server/: Cargo.toml
libs/openapi-server/src/: lib.rs
libs/openapi-server/src/models/: mod.rs
scripts/: install.sh
testdata/crypt/: .gitkeep
