[package]
name = "ajigent"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
include = ["src/**/*"]
build = "build.rs"
description = "Ajime Edge Agent for robotics workflow orchestration"

[features]
default = []
test = []
hardware = []  # Enable hardware features (GPIO, camera)

[dependencies]
# Async runtime
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# HTTP client
reqwest = { workspace = true }
http = { workspace = true }
url = { workspace = true }
tokio-tungstenite = { workspace = true }

# MQTT
rumqttc = { workspace = true }
native-tls = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Cryptography
sha2 = { workspace = true }
base64 = { workspace = true }
jsonwebtoken = { workspace = true }

# Date/time
chrono = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

# System info
sysinfo = { workspace = true }

# Utilities
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
secrecy = { workspace = true }
colored = { workspace = true }

# Terminal (PTY) and network scanner
portable-pty = { workspace = true }
ipnet = { workspace = true }

# OpenAPI libs
openapi-client = { workspace = true }
openapi-server = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"

[build-dependencies]
chrono = "0.4"
